create custom exceptions for ticket operations